# prodius

./: LICENSE  README.md  requirements.txt  setup.cfg
prodius/: __init__.py  _product.py  exceptions.py
source/project/: __init__.py
tests/: test_product.py
