[metadata]
name = prodius
version = 0.0.1
author = Sekgobela Kevin
author_email = kevinnoko23@gmail.com
description = Calculates cartesian product from iterables without memory error.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sekgobela-kevin/prodius
project_urls =
    Bug Tracker = https://github.com/sekgobela-kevin/prodius/issues
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: MIT License
    Programming Language :: Python
keywords = 
   cartesian-product
   product
   iterables
   sets
   pairs

[options]
packages = find:
install_requires =

python_requires = >=3.6

