[metadata]
name = prodius
version = 0.0.2
author = Sekgobela Kevin
author_email = kevinnoko23@gmail.com
description = Calculates cartesian product from iterables
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sekgobela-kevin/prodius
project_urls =
    Bug Tracker = https://github.com/sekgobela-kevin/prodius/issues
classifiers =
    Intended Audience :: Developers
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities
keywords = 
   cartesian-product
   product
   iterables
   sets
   pairs

[options]
packages = find:
install_requires =

python_requires = >=3.6

[options.packages.find]
exclude =
    tests
